@@ -1921,6 +1921,28 @@ module type S =
   end
 ;
 
+value bparse_token_stream entry fts = do {
+  let restore =
+    let old_max_fcount = max_fcount.val in
+    let old_nb_ftry = nb_ftry.val in
+    fun () -> do {
+      max_fcount.val := old_max_fcount;
+      nb_ftry.val := old_nb_ftry;
+    }
+  in
+  max_fcount.val := 0;
+  nb_ftry.val := 0;
+  let r =
+    try
+      match entry.bstart 0 fts with
+      | Some (a, _, _) -> Obj.magic a
+      | None -> raise Stream.Failure
+      end
+    with e -> do { restore (); raise e }
+  in
+  restore (); r
+};
+
 module GMake (L : GLexerType) =
   struct
     type te = L.te;
@@ -1959,16 +1981,11 @@ module GMake (L : GLexerType) =
           match e.egram.galgo with
           | DefaultAlgorithm ->
               if backtrack_parse.val then
-                let fts = fstream_of_stream ts in
-                match e.bstart 0 fts with
-                | Some (a, _, _) -> Obj.magic a
-                | None -> raise Stream.Failure
-                end
+                bparse_token_stream e (fstream_of_stream ts)
               else
                 Obj.magic (e.estart 0 ts : Obj.t)
           | Predictive -> Obj.magic (e.estart 0 ts : Obj.t)
-          | Backtracking ->
-              failwith "not impl gram Entry.parse_token backtrack"
+          | Backtracking -> bparse_token_stream e (fstream_of_stream ts)
           end
         ;
         value name e = e.ename;
